--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <br>
         <br>
         <section>
-        <div style="display: flex;justify-content: center;">
-        <img src="Images/fooconcert.jpg" alt="Foo concert" id="foo_concert" >
+        <div class="foo_img1">
+        <img src="Images/fooconcert.jpg" alt="Foo concert" id="foo_concert" width="100%" >
         </div>
-        <div style="display: flex;justify-content: center;">
-        <img src="Images/foosetimage.jpg" alt="Foo set image" id="foo_set_image" >    
+        <div class="foo_img2">
+        <img src="Images/foosetimage.jpg" alt="Foo set image" id="foo_set_image" width="100%"> 
         </div>
         <br>
         <div style="display: flex;justify-content: center;">
